src/objects/Services__c.object
<CustomObject>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>DA - Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bristol &amp; South Gloucestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bromley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Calderdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Central Lancs PCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Coventry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Croydon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - East Sussex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Enfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Fenland and Marshland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Gloucester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Greenwich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Hackney &amp; City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Harrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Islington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Kingston-upon-Thames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Kirklees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Lambeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Leeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Leicestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Lincolnshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - NE Lincolnshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - North Lincolnshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - North Tyneside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Richmond East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Richmond West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Line_1__c</fullName>
        <label>Street Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_2__c</fullName>
        <label>Street Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Line_3__c</fullName>
        <label>Street Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type_Internal__c</fullName>
        <inlineHelpText>Only available for Befriending and Information Programme services</inlineHelpText>
        <label>Service Sub Type</label>
        <picklist>
            <controllingField>service_type__c</controllingField>
            <picklistValues>
                <fullName>Telephone befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrISP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CrISP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPSAF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>External Sub Types.</description>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits (I&amp;A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Planning (I&amp;A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Therapies (L&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Adviser (I&amp;A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise/Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hairdressers (L&amp;W)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Lifestyle &amp; Wellbeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Social &amp; Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outings/Day Trips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singing/Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walking/Rambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Toilet_Facilities__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the free text box if required</inlineHelpText>
        <label>Toilet Facilities</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>oldPrimary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>oldPrimary contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dementia Connect - Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>service_areaservedtext__c</fullName>
        <label>Area served</label>
        <picklist>
            <picklistValues>
                <fullName>Open to all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted to certain local authority areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted to certain postcodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other restrictions or boundaries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_areaservedtype__c</fullName>
        <label>Area served type</label>
        <picklist>
            <picklistValues>
                <fullName>Open to all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted to certain local authority areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted to certain postcodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other restrictions or boundaries</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_branch_costcentre__c</fullName>
        <label>Branch cost centre</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_closedate__c</fullName>
        <inlineHelpText>If the service has closed you also need to update the status to &apos;Closed&apos; to prevent it displaying on the website.</inlineHelpText>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>service_code__c</fullName>
        <externalId>true</externalId>
        <label>Service code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>service_contact_hours__c</fullName>
        <inlineHelpText>Currently shown on website will be redundant after Jan 2015</inlineHelpText>
        <label>Office Contact hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_county__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_description__c</fullName>
        <inlineHelpText>Service description is  automatically populated from the service types for internal services</inlineHelpText>
        <label>Service Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>service_email__c</fullName>
        <inlineHelpText>This must be the email address for the local service office or locality. No individual email addresses should be used.</inlineHelpText>
        <label>Email address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_financeactivitycode__c</fullName>
        <label>Finance activity code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_opendate__c</fullName>
        <label>Open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>service_operationhours__c</fullName>
        <label>Operation hours</label>
        <length>224</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_operationhourscomment__c</fullName>
        <label>Operation hours comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>service_postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>service_targetclientgroup__c</fullName>
        <inlineHelpText>Select who the service is for from the drop down list</inlineHelpText>
        <label>Target client group</label>
        <picklist>
            <picklistValues>
                <fullName>People with Dementia Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers of People with Dementia Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with Dementia and their carers, family and friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with Dementia aged under 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia diagnosed under 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers of older people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers of people with dementia of all ages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers of younger people with dementia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former carers only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix of carers and former carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix of people with dementia, carers and former carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older people with dementia (65 and over) and their carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People of all ages with dementia and their carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia diagnosed at 65 and over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers of people with dementia diagnosed at 65 and over only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia of all ages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia younger (less than 65 years old)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia, their carers and families, and professionals in health and social care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia diagnosed under 65 and their carers, family and friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers of people with dementia diagnosed under 65 only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia and their carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People with dementia diagnosed at 65 and over and their carers, family and friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionals working in health and social care etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People over 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Younger people with dementia (under 65) and their carers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The general public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please describe)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_telephone__c</fullName>
        <inlineHelpText>This should be an office phone not an individual mobile number</inlineHelpText>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>service_type__c</fullName>
        <inlineHelpText>Service description will be automatically populated from the service type (or sub type if there is one)</inlineHelpText>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Activity group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult education &amp; training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice and support (emotional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice and support (financial)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice and support (general)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice and support (legal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness raising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Befriending / home support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer Support &amp; Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carer Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community support service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counselling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day care and support (establishment based)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day support / day care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia cafés</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Support &amp; Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise / Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home facilities &amp; services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and Advice (Dementia)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information and Advice (Financial &amp; Legal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information programmes &amp; provision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>zzdel_Branch_area_code__c</fullName>
        <label>zzdel_Branch area code</label>
        <picklist>
            <picklistValues>
                <fullName>EAEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EALO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NISW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WECW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEWM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zzdel_Branch_email__c</fullName>
        <label>zzdel_Branch email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Branch_name__c</fullName>
        <label>zzdel_Branch name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Branch_telephone__c</fullName>
        <label>zzdel_Branch telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zzdel_DA_Site__c</fullName>
        <formula>IF( CreatedBy.UserRole.Name  == &quot;Guidebook Volunteer&quot; ,
 TEXT( zzdel_Site__c ),
CreatedBy.UserRole.Name)</formula>
        <label>zzdel_DA Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Image_Doc_ID__c</fullName>
        <label>zzdel_Image Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Leaflet__c</fullName>
        <label>zzdel_Leaflet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Other_type__c</fullName>
        <label>zzdel_Other type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Restrict_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zzdel_Restricted access?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zzdel_Service_Name__c</fullName>
        <description>Descrptive text...</description>
        <label>zzdel_Service Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzdel_Site__c</fullName>
        <label>zzdel_Site</label>
        <picklist>
            <picklistValues>
                <fullName>DA - Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bristol &amp; South Gloucestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bromley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Bury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Central Lancs PCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Coventry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Croydon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - East Sussex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Enfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Fenland and Marshland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Gloucester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Greenwich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Hackney &amp; City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Harrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Islington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Kingston-upon-Thames</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Kirklees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Lambeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Leicestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Lincolnshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Norfolk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - North Lincolnshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - North Tyneside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Sheffield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Shrewsbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Solihull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Somerset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - South Staffordshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - Southwark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zzdel_service_areaservedtext__c</fullName>
        <label>zzdel_Area served</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zzdel_service_branch_costcentre__c</fullName>
        <label>zzdel_Branch cost centre</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Dementia Connect - Service</label>
    <listViews>
        <fullName>All_Alzheimer_s_Society_Services</fullName>
        <columns>NAME</columns>
        <columns>service_type__c</columns>
        <columns>Operated_By__c</columns>
        <columns>Locality__c</columns>
        <columns>service_status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Services__c.Internal</value>
        </filters>
        <filters>
            <field>service_status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Accepted</value>
        </filters>
        <label>All Alzheimer&apos;s Society Services</label>
    </listViews>
    <listViews>
        <fullName>All_External_Core_Records_Dsply_WebsiteN</fullName>
        <columns>NAME</columns>
        <columns>service_type__c</columns>
        <columns>Record_progress__c</columns>
        <columns>Operated_By__c</columns>
        <columns>Last_Reviewed__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>service_postcode__c</columns>
        <columns>Core_Record_Set__c</columns>
        <columns>Locality__c</columns>
        <columns>Local_Authority__c</columns>
        <columns>service_city__c</columns>
        <columns>service_county__c</columns>
        <columns>service_street__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Record_Set__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>service_status__c</field>
            <operation>contains</operation>
            <value>Open,Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Services__c.External</value>
        </filters>
        <filters>
            <field>Display_on_public_website__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All External Core Records-Dsply WebsiteN</label>
        <sharedTo>
            <role>Guidebook</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_External_Core_Records_Dsply_WebsiteY</fullName>
        <columns>NAME</columns>
        <columns>service_type__c</columns>
        <columns>Last_Reviewed__c</columns>
        <columns>Record_progress__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>service_postcode__c</columns>
        <columns>Display_on_public_website__c</columns>
        <columns>Operated_By__c</columns>
        <columns>Locality__c</columns>
        <columns>Local_Authority__c</columns>
        <columns>service_city__c</columns>
        <columns>service_county__c</columns>
        <columns>service_street__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_Record_Set__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>service_status__c</field>
            <operation>contains</operation>
            <value>Open,Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Services__c.External</value>
        </filters>
        <filters>
            <field>Display_on_public_website__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All External Core Records-Dsply WebsiteY</label>
        <sharedTo>
            <role>Guidebook</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_External_Core_Records_test</fullName>
        <columns>NAME</columns>
        <columns>service_type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/27/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Services__c.External</value>
        </filters>
        <label>EXTERNAL SERVICES CREATED SINCE 27/10/14</label>
        <sharedTo>
            <role>Guidebook</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_External_Services_new</fullName>
        <columns>NAME</columns>
        <columns>service_type__c</columns>
        <columns>service_city__c</columns>
        <columns>Locality__c</columns>
        <columns>service_postcode__c</columns>
        <columns>Local_Authority__c</columns>
        <columns>Last_Reviewed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Services__c.External</value>
        </filters>
        <filters>
            <field>Local_Authority__c</field>
            <operation>equals</operation>
        </filters>
        <label>All External Services without LA</label>
        <sharedTo>
            <role>Guidebook</role>
        </sharedTo>
    </listViews>
</CustomObject>